Converted (not really) to Celsius.

--- a/frontend/src/app/forecast-report/forecast-report.component.html
+++ b/frontend/src/app/forecast-report/forecast-report.component.html
@@ -8,5 +8,5 @@ interface Forecast {
 -->
 <div>
     <h2>{{date | date: 'fullDate'}}</h2>
-    <div><fa [name]="icon()"></fa>{{temperature}} &#176;F</div>
+    <div><fa [name]="icon()"></fa>{{temperature}} &#176;C</div>
 </div>
